--- a/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
+++ b/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
@@ -48,8 +48,8 @@
                                                 <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
                                                 filterwidget="date" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="approvedBy" caption="Reviewed By" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
-                                                filterwidget="date" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="expiresDate" caption="Approval Expiration Date" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp"
+                                                show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                                 <wm-grid-action key="addNewRow" display-name="Add Municipality" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Municipality" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" accessroles="CXAdmin" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
