--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -39,11 +39,6 @@
                                             <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
                                             <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="approvalStatus" caption="Review Status" type="string" primary-key="false" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp"
-                                            show="true" filterwidget="date" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="approvedBy" caption="Reviewed By" type="string" primary-key="false" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp"
-                                            show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Review" action="Widgets.dialogPendingApprovals.open()" disabled="false"></wm-grid-row-action>
                                             <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Details" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
                                             <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleterowAction($event)" accessroles="CXAdmin" disabled="false"></wm-grid-row-action>
@@ -75,7 +70,7 @@
                                             <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
                                             <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="approvalStatus" caption="Review Status" type="string" primary-key="false" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp"
+                                            <wm-grid-column binding="expiresDate" caption="Approval Expiration Date" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp"
                                             show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="approvedBy" caption="Reviewed By" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
@@ -111,11 +106,9 @@
                                             <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
                                             <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="approvalStatus" caption="Review Status" type="string" primary-key="false" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp"
-                                            show="true" filterwidget="date" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="approvedBy" caption="Reviewed By" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
-                                            filterwidget="date" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="expiresDate" caption="Approval Expiration Date" type="date" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="date" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="approvedBy" caption="Reviewed By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="date" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="date" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-mode-edit" title="Review" action="Widgets.dialogReviewSuspended.open()" disabled="false"></wm-grid-row-action>
                                             <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Details" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
                                             <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleterowAction($event)" accessroles="CXAdmin" disabled="false"></wm-grid-row-action>
@@ -153,8 +146,8 @@
                 <wm-gridrow name="gridrow23">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn40" horizontalalign="center" padding=".5em unset">
                         <wm-composite name="composite2">
-                            <wm-label class="col-md-3 form-control-static" name="label7" caption="Review Status" horizontalalign="left" fontweight="bold"></wm-label>
-                            <wm-container class="col-md-9" name="container2" width="169px">
+                            <wm-label class="col-md-5 form-control-static" name="label7" caption="Review Status" horizontalalign="left" fontweight="bold"></wm-label>
+                            <wm-container class="col-md-7" name="container2" width="169px">
                                 <wm-select name="selectStatusFromPending" dataset="Pending,Approved,Suspended" datavalue="Pending"></wm-select>
                             </wm-container>
                         </wm-composite>
@@ -162,9 +155,9 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow24">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn42" horizontalalign="center" padding=".5em unset">
-                        <wm-composite name="composite3" required="true">
-                            <wm-label class="col-md-3 form-control-static" name="label8" caption="Expiration Date" horizontalalign="left" fontweight="bold" required="false"></wm-label>
-                            <wm-container class="col-md-9" name="container3">
+                        <wm-composite name="composite3" required="true" show="bind:Widgets.selectStatusFromPending.datavalue === &quot;Approved&quot;">
+                            <wm-label class="col-md-5 form-control-static" name="label8" caption="Approval Expiration Date" horizontalalign="left" fontweight="bold" required="false"></wm-label>
+                            <wm-container class="col-md-7" name="container3">
                                 <wm-date name="datetimeExpirationFormPending" mindate="bind:today" datepattern="MM-dd-yyyy" placeholder="Select Date" datavalue="bind:Widgets.gridPending.selecteditem.expiresDate" required="true"></wm-date>
                             </wm-container>
                         </wm-composite>
@@ -172,7 +165,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions2">
-                <wm-button class="btn-primary" caption="Update" type="button" margin="unset 0.5em" name="buttonUpdateFromPending" on-click="Variables.UpdateVendorStatusFromPending.invoke()" iconclass="wi wi-update" disabled="bind:Widgets.datetimeExpirationFormPending.datavalue <= 0"></wm-button>
+                <wm-button class="btn-primary" caption="Update" type="button" margin="unset 0.5em" name="buttonUpdateFromPending" on-click="Variables.UpdateVendorStatusFromPending.invoke()" iconclass="wi wi-update" disabled="bind:(Widgets.selectStatusFromPending.datavalue === &quot;Approved&quot; ) &amp;&amp; (Widgets.datetimeExpirationFormPending.datavalue <= 0 )"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button2" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
@@ -183,8 +176,8 @@
                 <wm-gridrow name="gridrow24_1">
                     <wm-gridcolumn columnwidth="12" horizontalalign="center" padding=".5em unset" name="gridcolumn41">
                         <wm-composite name="composite4">
-                            <wm-label class="col-md-3 form-control-static" caption="Review Status" horizontalalign="left" name="label9" fontweight="bold"></wm-label>
-                            <wm-container class="col-md-9" name="container4" width="169px">
+                            <wm-label class="col-md-5 form-control-static" caption="Review Status" horizontalalign="left" name="label9" fontweight="bold"></wm-label>
+                            <wm-container class="col-md-7" name="container4" width="169px">
                                 <wm-select dataset="Approved,Suspended" datavalue="Approved" name="selectFromApproved"></wm-select>
                             </wm-container>
                         </wm-composite>
@@ -192,9 +185,9 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow25_1">
                     <wm-gridcolumn columnwidth="12" horizontalalign="center" padding=".5em unset" name="gridcolumn42_1">
-                        <wm-composite name="composite5" required="true">
-                            <wm-label class="col-md-3 form-control-static" caption="Expiration Date" horizontalalign="left" name="label10" fontweight="bold"></wm-label>
-                            <wm-container class="col-md-9" name="container5">
+                        <wm-composite name="composite5" required="true" show="bind:Widgets.selectFromApproved.datavalue === &quot;Approved&quot;">
+                            <wm-label class="col-md-5 form-control-static" caption="Approval Expiration Date" horizontalalign="left" name="label10" fontweight="bold"></wm-label>
+                            <wm-container class="col-md-7" name="container5">
                                 <wm-date mindate="bind:today" datepattern="MM-dd-yyyy" name="datetimeFormApproved" datavalue="bind:Widgets.gridApprovedVendors.selecteditem.expiresDate" hourstep="0" placeholder="Select Date" required="true"></wm-date>
                             </wm-container>
                         </wm-composite>
@@ -202,7 +195,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions3">
-                <wm-button class="btn-primary" caption="Update" type="button" margin="unset 0.5em" on-click="Variables.UpdateVendorStatusFromApproved.invoke()" name="buttonFromApproved" iconclass="wi wi-update" disabled="bind:Widgets.datetimeFormApproved.datavalue <= 0"></wm-button>
+                <wm-button class="btn-primary" caption="Update" type="button" margin="unset 0.5em" on-click="Variables.UpdateVendorStatusFromApproved.invoke()" name="buttonFromApproved" iconclass="wi wi-update" disabled="bind:(Widgets.selectFromApproved.datavalue === &quot;Approved&quot; ) &amp;&amp; (Widgets.datetimeFormApproved.datavalue <= 0 )"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button4" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
@@ -213,8 +206,8 @@
                 <wm-gridrow name="gridrow24_2">
                     <wm-gridcolumn columnwidth="12" horizontalalign="center" padding=".5em unset" name="gridcolumn41_1">
                         <wm-composite name="composite7">
-                            <wm-label class="col-md-3 form-control-static" caption="Review Status" horizontalalign="left" name="label11" fontweight="bold"></wm-label>
-                            <wm-container class="col-md-9" name="container6" width="169px">
+                            <wm-label class="col-md-5 form-control-static" caption="Review Status" horizontalalign="left" name="label11" fontweight="bold"></wm-label>
+                            <wm-container class="col-md-7" name="container6" width="169px">
                                 <wm-select dataset="Approved,Suspended" datavalue="Suspended" name="selectFromSuspended"></wm-select>
                             </wm-container>
                         </wm-composite>
@@ -222,9 +215,9 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow25_2">
                     <wm-gridcolumn columnwidth="12" horizontalalign="center" padding=".5em unset" name="gridcolumn42_2">
-                        <wm-composite name="composite8" required="true">
-                            <wm-label class="col-md-3 form-control-static" caption="Expiration Date" horizontalalign="left" name="label12" fontweight="bold"></wm-label>
-                            <wm-container class="col-md-9" name="container7">
+                        <wm-composite name="composite8" required="true" show="bind:Widgets.selectFromSuspended.datavalue === &quot;Approved&quot;">
+                            <wm-label class="col-md-5 form-control-static" caption="Approval Expiration Date" horizontalalign="left" name="label12" fontweight="bold"></wm-label>
+                            <wm-container class="col-md-7" name="container7">
                                 <wm-date mindate="bind:today" datepattern="MM-dd-yyyy" datavalue="bind:Widgets.gridSuspended.selecteditem.expiresDate" name="datetimeFromSuspended" placeholder="Select Date" required="true"></wm-date>
                             </wm-container>
                         </wm-composite>
@@ -232,7 +225,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions4">
-                <wm-button class="btn-primary" caption="Update" type="button" margin="unset 0.5em" on-click="Variables.UpdateVendorStatusFromSuspended.invoke()" name="buttonFromSuspended" iconclass="wi wi-update" disabled="bind:Widgets.datetimeFromSuspended.datavalue <= 0"></wm-button>
+                <wm-button class="btn-primary" caption="Update" type="button" margin="unset 0.5em" on-click="Variables.UpdateVendorStatusFromSuspended.invoke()" name="buttonFromSuspended" iconclass="wi wi-update" disabled="bind:(Widgets.selectFromSuspended.datavalue === &quot;Approved&quot; ) &amp;&amp; (Widgets.datetimeFromSuspended.datavalue <= 0 )"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button6" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
