--- a/src/main/webapp/pages/MunicipalityForms/MunicipalityForms.html
+++ b/src/main/webapp/pages/MunicipalityForms/MunicipalityForms.html
@@ -76,26 +76,26 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn5">
                         <wm-grid title="" dataset="bind:Variables.svSearchAllForms.dataSet" navigation="Classic" name="gridMunicipalityForm" filtermode="multicolumn" showrecordcount="true" loadingdatamsg="Searching" nodatamessage="No Forms Found">
                             <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="80px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
-                            <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="createdBy" caption="Submitted By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="dateSubmitted" caption="Date Submitted" type="string" edit-widget-type="text" show="true" readonly="false">{{row.getProperty('dateSubmitted') | toLocalDateString:true}}</wm-grid-column>
-                            <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="bind:Variables.EmployeesMunicipalities.dataSet.content.length > 1"
-                            readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="formStatus" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="address" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="subdivision" caption="Development" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="assignedToGroup" caption="Process Owner Group" type="string" show="true" readonly="undefined"></wm-grid-column>
-                            <wm-grid-column binding="primaryVendor" caption="Primary Contractor" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" edit-widget-type="text" show="true" filterwidget="number" readonly="false"><span>{{(!row.getProperty('balanceDue') ? 0 : row.getProperty('balanceDue')) | toCurrency:'$':2}}</span>
+                            <wm-grid-column binding="formTitle" caption="Form Title" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="createdBy" caption="Submitted By" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="dateSubmitted" caption="Date Submitted" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false">{{row.getProperty('dateSubmitted') | toLocalDateString:true}}</wm-grid-column>
+                            <wm-grid-column binding="municipalityName" caption="Municipality" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text"
+                            show="bind:Variables.EmployeesMunicipalities.dataSet.content.length > 1" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="formDesign" caption="Form" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="formStatus" caption="Form Status" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="address" caption="Address" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="subdivision" caption="Development" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="assignedToGroup" caption="Process Owner Group" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="primaryVendor" caption="Primary Contractor" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" filterwidget="number" readonly="false"><span>{{(!row.getProperty('balanceDue') ? 0 : row.getProperty('balanceDue')) | toCurrency:'$':2}}</span>
                             </wm-grid-column>
-                            <wm-grid-column binding="codeEnforcement" caption="Code Enforcement" type="string" widget-type="checkbox" edit-widget-type="text" show="true" readonly="false">
+                            <wm-grid-column binding="codeEnforcement" caption="Code Enforcement" type="string" widget-type="checkbox" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false">
                                 <wm-checkbox scopedatavalue="row['codeEnforcement']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
                             </wm-grid-column>
-                            <wm-grid-column binding="municipalityInternalForm" caption="Municipality Internal Form" type="string" widget-type="checkbox" edit-widget-type="text" show="true" readonly="false">
+                            <wm-grid-column binding="municipalityInternalForm" caption="Municipality Internal Form" type="string" widget-type="checkbox" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" readonly="false">
                                 <wm-checkbox scopedatavalue="row['municipalityInternalForm']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
                             </wm-grid-column>
-                            <wm-grid-column binding="dateModified" caption="Date Modified" type="string" edit-widget-type="text" show="true" filterwidget="date" readonly="false">{{row.getProperty('dateModified') | toLocalDateString}}</wm-grid-column>
+                            <wm-grid-column binding="dateModified" caption="Date Modified" type="string" col-ng-class="{'incomplete':row.incomplete===true}" edit-widget-type="text" show="true" filterwidget="date" readonly="false">{{row.getProperty('dateModified') | toLocalDateString}}</wm-grid-column>
                             <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Form" action="Widgets.pagedialogViewForm.open()"
                             disabled="false"></wm-grid-row-action>
                         </wm-grid>
