--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -156,6 +156,7 @@
                                                                 placeholder="" hint="This option allows inspections as part of the form process and enables an &quot;Inspections&quot; tab on this page that contains additional settings." defaultvalue="false"
                                                                 checkedvalue="true" uncheckedvalue="false"></wm-form-field>
                                                             </wm-gridcolumn>
+                                                            <wm-gridcolumn columnwidth="4" name="gridcolumn131_2"></wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow39" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn76_4" padding="unset 1em unset unset">
@@ -188,11 +189,11 @@
                                                                 <wm-form-field name="allowOwnerToCompleteWork" displayname="Allow Owner to Complete Work" show="true" primary-key="false" generator="assigned" key="allowOwnerToCompleteWork" type="boolean" readonly="false"
                                                                 required="false" widget="checkbox" disabled="bind:!Widgets.liveformUpdateFormType.formWidgets.requireOwner.datavalue || Widgets.liveformUpdateFormType.formWidgets.selectVendorOption.displayValue==='None'"
                                                                 hint="When enabled, users will be able to specify that the property owner is completing the work associated with the form, instead of selecting a registered contractor. &quot;Require Location&quot;, &quot;Require Owner&quot;, and &quot;Require Contractor&quot; must be active to use this setting."
-                                                                placeholder=""></wm-form-field>
+                                                                placeholder="" defaultvalue="false" checkedvalue="true" uncheckedvalue="false"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn138">
                                                                 <wm-form-field name="allowContractorTbd" displayname="Allow Contractor TBD" show="true" primary-key="false" generator="assigned" key="allowContractorTbd" type="boolean" readonly="false" required="false"
-                                                                widget="checkbox" defaultvalue="bind:Widgets.liveformUpdateFormType.formWidgets.selectVendorOption.displayValue!='None'" checkedvalue="true" uncheckedvalue="false" disabled="bind:Widgets.liveformUpdateFormType.formWidgets.selectVendorOption.displayValue=='None'"></wm-form-field>
+                                                                widget="checkbox" defaultvalue="false" checkedvalue="true" uncheckedvalue="false" disabled="bind:Widgets.liveformUpdateFormType.formWidgets.selectVendorOption.displayValue=='None'" hint="When enabled, the user will be able to select &quot;Contractor TBD&quot; while submitting the form instead of being forced to provide a registered contractor in order to complete the new form wizard. &quot;Require Contractor&quot; must be active to use this setting."></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow98" padding="unset unset 1em unset">
