--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -199,13 +199,16 @@
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn129">
                                                 <wm-label padding="unset 0.5em" name="label82" caption="The following contractors are associated with this form."></wm-label>
                                                 <wm-label padding="unset 0.5em" name="label35" caption="If multiple contractors are involved, please specify the correct &quot;primary&quot; contractor." show="bind:Variables.lvFormType.dataSet.data[$i].multipleVendors"></wm-label>
+                                                <wm-composite name="composite13" horizontalalign="left" show="bind:Variables.CurrentForm.firstRecord.formTypes.allowOwnerToCompleteWork">
+                                                    <wm-checkbox caption="Owner is Completing Work" class="col-md-push-3 col-md-9" name="checkboxOwnerCompletingWork" readonly="true" disabled="false" datavalue="bind:Variables.CurrentForm.dataSet.data[$i].ownerCompletingWork"></wm-checkbox>
+                                                </wm-composite>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow63">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn131">
                                                 <wm-livegrid formlayout="inline" name="livegridFormVendors">
                                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.Cx2Vendors2formData.dataSet" navigation="Classic" name="gridFormVendors" filtermode="multicolumn" exportformat="EXCEL"
-                                                    showrecordcount="true" nodatamessage="The property owner is completing this work -- there is no contractor assigned.">
+                                                    showrecordcount="true" nodatamessage="No Contractor Assigned">
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
                                                         <wm-grid-column binding="primaryVendor" caption="Primary" type="boolean" widget-type="checkbox" primary-key="false" generator="assigned" edit-widget-type="checkbox" searchable="false"
                                                         show="bind:Variables.lvFormType.dataSet.data[$i].multipleVendors" readonly="false">
@@ -217,8 +220,8 @@
                                                         <wm-grid-column binding="vendor.companyWebsite" caption="Website" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Vendor"></wm-grid-column>
                                                         <wm-grid-column binding="sharedOn" caption="Date Added" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
                                                         filterwidget="date" readonly="false"></wm-grid-column>
-                                                        <wm-grid-action key="addNewRow" display-name="Add Contractor" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Contractor" action="Widgets.dialogAddVendor.open()"
-                                                        shortcutkey="" disabled="bind:(!Variables.lvFormType.dataSet.data[$i].multipleVendors &amp;&amp; Variables.Cx2Vendors2formData.dataSet.data.length > 0) || !Variables.svUserPermissions.dataSet.canEdit"></wm-grid-action>
+                                                        <wm-grid-action key="addNewRow" display-name="Add Contractor" show="bind:!Variables.CurrentForm.firstRecord.ownerCompletingWork" class="btn-primary" iconclass="wi wi-plus" title="Add Contractor"
+                                                        action="Widgets.dialogAddVendor.open()" shortcutkey="" disabled="bind:(!Variables.lvFormType.dataSet.data[$i].multipleVendors &amp;&amp; Variables.Cx2Vendors2formData.dataSet.data.length > 0) || !Variables.svUserPermissions.dataSet.canEdit"></wm-grid-action>
                                                         <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Details" action="Widgets.dialogVendorDetails.open()"
                                                         disabled="false"></wm-grid-row-action>
                                                         <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.svUserPermissions.dataSet.canEdit" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.dialogVendorDeleteConf.open();deleterowAction($event)"
